<resources>
    <string name="app_name">MobDev2</string>
    <string name="book_synopsis">John McCarthy (4 tháng 9 năm 1927 - 24 tháng 10 năm 2011) là một nhà khoa học máy tính và nhà khoa học nhận thức người Mỹ. McCarthy là một trong những người sáng lập ra bộ môn trí tuệ nhân tạo.[1] Ông đặt ra thuật ngữ \" trí tuệ nhân tạo \" (AI), phát triển họ ngôn ngữ lập trình Lisp, ngôn ngữ này ảnh hưởng đáng kể đến việc thiết kế ngôn ngữ lập trình ALGOL, chia s
    <string name="back_button_desc">Go back</string>
    <string name="book_all_screen">Home</string>
    <string name="book_library">Library</string>
    <string name="book_settings_screen">Settings</string>
    <string name="book_forum_screen">Forum</string>
    <string name="cover_image_desc">Book cover image</string>
    <string name="library_read_button">Read</string>
    <string name="library_delete_button">Delete</string>
    <string name="web_client_id">186501447353-2kk32vdm3himb2pchjqfqvmpr150k1h1.apps.googleusercontent.com</string>
    <string name="error">Oops! Something went wrong.</string>
    <string name="reader_min_font_size_reached">Sorry, cannot go any lower than that!</string>
    <string name="reader_max_font_size_reached">\nSorry, cannot go any higher than that!</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="reader_setting">Themes &amp; Settings</string>
...
