...
                },
                icon = {
                    Icon(Icons.Filled.Edit, contentDescription = "Write review")
                },
                modifier = Modifier
                    .padding(end = 10.dp, bottom = 8.dp)
                    .testTag("ReviewButton"),
            )
        },
        content = {paddingValues ->

            if (viewModel.isLoading) {
                Box(
...
                            }

                            BasicTextField(
                                value = reviewText,
                                onValueChange = { reviewText = it },
                                modifier = Modifier.padding(top = 16.dp)
                                    .testTag("ReviewTextField"),
                                decorationBox = { innerTextField ->
                                    if (reviewText.isEmpty()) {
                                        Text("Type your review here...", color = Color.Gray, fontSize = 14.sp)
                                    }
                                    innerTextField()
                                }
...
                )
                Row {
                    TextButton(onClick = { viewModel.updateLikesCount(bookID, review.likesCount + 1, review.reviewID) }) {
                        Text("Like (${review.likesCount})")
                    }
                    TextButton(onClick = { showReplyDialog = true }) {
                        Text("Reply")
                    }
                }

                // Display a limited number of replies or all based on state
                if (review.replies.isNotEmpty()) {
                    if (showAllReplies) {
...
                                BasicTextField(
                                    value = replyText,
                                    onValueChange = { replyText = it },
                                    modifier = Modifier.padding(top = 16.dp),
                                    decorationBox = { innerTextField ->
                                        if (replyText.isEmpty()) {
                                            Text("Type your reply here...", color = Color.Gray, fontSize = 14.sp)
                                        }
                                        innerTextField()
                                    }
                                )
                            }
                        },
...
                                        replyText = ""
                                        showReplyDialog = false
                                    }

                                }
                            ) {
                                Text("Submit")
                            }

                            if (showWarningDialog) {
                                AlertDialog(
                                    onDismissRequest = { showWarningDialog = false },
                                    title = { Text("Warning") },
                                    text = {
                                        Column {
                                            Text("Your reply contains prohibited words:")
                                            detectedProhibitedWords.forEach { word ->
                                                Text("- $word")
                                            }
                                        }
                                    },
                                    confirmButton = {
...
    if (showWarningDialog) {
        AlertDialog(
            onDismissRequest = { showWarningDialog = false },
            title = { Text("Warning") },
            text = {
                Column {
                    Text("Your review contains prohibited words:")
                    detectedProhibitedWords.forEach { word ->
                        Text("- $word")
                    }
                }
            },
            confirmButton = {
...
